--- a/todolist/mainpage/static/mainpage/layout.css
+++ b/todolist/mainpage/static/mainpage/layout.css
@@ -13,10 +13,15 @@
     font-family: cursive;
     text-align: center;
 }
-.sever{height: 50vh;
+.sever{
+height: 50vh;
 width: 100vw;
 display: flex;
 float: center;
+}
+.sever_2{
+    height: 50vh;
+    width: 100vw;
 }
 article{
     height: auto;
