--- a/todolist/mainpage/templates/mainpage/newtask.html
+++ b/todolist/mainpage/templates/mainpage/newtask.html
@@ -1,3 +1,5 @@
+{% extends 'mainpage/header_footer.html' %}
+{% block content %}
 <form action="/newtask/" method="post">
     {% load static %}
 <link rel = "stylesheet" href="{% static 'mainpage/style.css' %}" > 
@@ -5,3 +7,4 @@
         {{ form }} 
     <input type="submit" value="Создать задачу"> 
     </form>
+{% endblock %}
