--- a/todolist/lotary/templates/lotary/wins.html
+++ b/todolist/lotary/templates/lotary/wins.html
@@ -17,4 +17,4 @@
 -->
 <h1>{{imia}}  {{otchestvo}}</h1>
 <h1>Поздравляю!!!!!</h1>
-<h3>Вы выиграли: {{wins.1}} руб</h3>
+<h3>Вы выиграли: {{wins}} руб! </h3>
