--- a/todolist/plants/templates/plants/contacts.html
+++ b/todolist/plants/templates/plants/contacts.html
@@ -4,17 +4,26 @@
 <link rel="stylesheet"  href="{% static 'plants/layout.css' %}">
 <div id='z'>
  <article id='contacts'>
-     <h1>КОНТАКТЫ</h1>
-    <h2>ТЕЛЕФОН</h2>
+     <h2>контакты</h2>
+    <h2>телефон</h2>
     <p>8 985 045 54 77</p>
-    <h2>ПОЧТА</h2>
+    <h2>почта</h2>
     <p>xnestro@mail.ru</p>
-</article>
-<article id='time_work'>
     <h1>Часы работы</h1>
     <p>ежеденевно с 10 до 20</p>
     <h1>Адрес</h1>
     <p>г.Москва ул.Барышиха д 38 </p>
+</article>
+<article id='time_work'>
+    <div style="position:relative;overflow:hidden;">
+        <a href="https://yandex.ru/maps/213/moscow/?utm_medium=mapframe&utm_source=maps" 
+        style="color:#eee;font-size:12px;position:absolute;top:0px;">Москва</a>
+        <a href="https://yandex.ru/maps/213/moscow/house/ulitsa_baryshikha_38/Z04YdQNjSkAEQFtvfXR0cH9gZw==/?ll=37.343352%2C55.851334&utm_medium=mapframe&utm_source=maps&z=17" 
+        style="color:#eee;font-size:12px;position:absolute;top:14px;">Улица Барышиха, 38 — Яндекс Карты</a>
+        <iframe src="https://yandex.ru/map-widget/v1/?ll=37.343352%2C55.851334&mode=whatshere&whatshere%5Bpoint%5D=37.343353%2C55.851333&whatshere%5Bzoom%5D=17&z=17" 
+        width="800" height="650" frameborder="1" allowfullscreen="true" style="position:relative;">
+        </iframe>
+    </div>
 </article>
 </div>
 
