--- a/todolist/plants/templates/plants/dostavka_oplata.html
+++ b/todolist/plants/templates/plants/dostavka_oplata.html
@@ -1,17 +1,21 @@
 {% extends 'plants/layout.html' %}
 {% block content %}
 <div>
- <h1>Стоимость доставки</h1>
- <p>{{dostavochka}}</p>
- <p>{{noch}}</p>
- <p>{{oblast}}</p>
+ <h2>Стоимость доставки</h2>
+ <ul>
+    <li>Доставка по Москве - 590 ₽</li>
+    <li>Доставка в вечернее время - 790 ₽</li>
+    <li>Доставка по МО 590 ₽ + 45 р/1 км</li>
+ </ul>
 </div>
 <div>
- <h1>Время доставки</h1>
-<p>Будние дни с 10.00 до 18.30</p>
+ <h2>Время доставки</h2>
+ <ul>
+    <li>Будние дни с 10.00 до 18.30</li>
+ </ul>
 </div>
 <div>
-<h1>Вечернее время и выходные дни:</h1>
+<h2>Вечернее время и выходные дни:</h2>
 <ul>
     <li>Для растений до 120 см – сторонней службой по тарифам компании перевозчика (Яндекс доставка, транспортные компании)</li>
     <li>Для растений выше 120 см - 790 ₽ по Москве, 790 ₽ +35 ₽, за МКАД (согласовывается заранее).</li>
