--- a/todolist/plants/templates/plants/exzotic.html
+++ b/todolist/plants/templates/plants/exzotic.html
@@ -1,4 +1,4 @@
 {% extends 'plants/layout.html' %}
 {% block content %}
-<h1>Растения для офиса</h1>
+<h1>Экзотические растения</h1>
 {% endblock %}
