--- a/todolist/plants/templates/plants/layout.html
+++ b/todolist/plants/templates/plants/layout.html
@@ -1,6 +1,7 @@
 {% load static %}
 <link rel = "stylesheet"  href=  "{% static 'plants/style.css' %}" >
 <link rel=  "stylesheet"  href=  "{% static 'plants/layout.css' %}">
+<script src ="{% static 'plants/upd.js' %}"></script>
 
 
 <header>
