--- a/todolist/plants/static/plants/layout.css
+++ b/todolist/plants/static/plants/layout.css
@@ -49,5 +49,57 @@ input{
     font-size:x-large;
 }
 #best{
-    margin-left: 20%;
+    margin-left: 10%;
+}
+#osnovnie_photo{
+    display: flex;
+    flex-direction:row;
+    justify-content: space-around ;
+    margin-top: 10px;
+}
+.komnata{
+    width: 510px;
+    height: 400px;
+}
+.office{
+    width: 510px;
+    height: 400px;
+}
+.neprihotlivie{
+    width: 510px;
+    height: 400px;
+}
+.pr{
+    display: inline-block;
+    overflow: hidden;
+}
+#stocks{
+    margin-left: 10%;
+}
+.stocks{
+    display: flex;
+    flex-direction:row;
+    justify-content: space-around ;
+    margin-top: 100px;
+}
+.stocks_15{
+    width: 300px;
+    height: 300px;
+}
+.opt{
+    width: 300px;
+    height: 300px;
+}
+.zakaz{
+    width: 300px;
+    height: 300px;
+}
+.aglaonema{
+    width: 200px;
+    height: 200px;
+}
+.raspoloshenie_room_plants{
+    display: flex;
+    flex-direction:row;
+    justify-content: space-around ;
 }
