--- a/todolist/plants/templates/plants/menu.html
+++ b/todolist/plants/templates/plants/menu.html
@@ -2,7 +2,6 @@
     <a  href = "{% url 'about_us' %}"> О нас </a>
     <a  href = "{% url 'contacts' %}">Контакты</a>
     <a  href = "{% url 'information' %}">Информация</a>
-    <a  href = "{% url 'sovets' %}">Советы</a>
     <a  href = "{% url 'dostavka_oplata' %}">Доставка и оплата</a>
     <a  href = "{% url 'ask_and_answer' %}">Вопросы и ответы</a>
     <a  href = "{% url 'blog' %}">Блог</a>
@@ -14,9 +13,9 @@
     <a  href = "{% url 'korzina' %}">Корзина</a>
 </div>
 <div class='rastenie'>
-    <a  href = "{% url 'room_plant' %}">Комнатные растения</a>
-    <a  href = "{% url 'unpretentious_plant' %}">Неприхотливые растения</a>
-    <a  href = "{% url 'office_plant' %}">Офисные растения</a>
+    <a class='ssilka_rastenie' href = "{% url 'room_plant' %}">Комнатные растения</a>
+    <a class='ssilka_rastenie' href = "{% url 'sovets' %}">Советы</a>
+    <a class='ssilka_rastenie' href = "{% url 'stocks' %}">Акции</a>
 </div>
 
 
